transpiler/internal/tests/types/soundness/p06_list_plus_heterogeneous.mochi
// MEP-4 P6: list `+` with mismatched element types is rejected.
let _ = [1, 2, 3] + ["a", "b"]
